# chatterbox

./: .gitignore
client/: CMakeLists.txt  main.cpp  view.cpp  view.h  view_controller.cpp  view_controller.h
server/: build.gradle
server/src/main/java/at/simulevski/chatterbox/server/: ServerApplication.java
server/src/main/java/at/simulevski/chatterbox/server/auth/: JwtAuthenticationFilter.java
server/src/main/java/at/simulevski/chatterbox/server/config/: ApplicationConfig.java  SecurityConfig.java
server/src/main/java/at/simulevski/chatterbox/server/controller/: AuthController.java  ChannelController.java  MessageController.java  UserController.java
server/src/main/java/at/simulevski/chatterbox/server/domain/: ChannelDto.java  ChannelEntity.java  MessageEntity.java  UserDto.java  UserEntity.java  UserRoles.java
server/src/main/java/at/simulevski/chatterbox/server/exception/: ChannelExistsException.java  GlobalExceptionHandler.java  UserExistsException.java  UserNotFoundException.java
server/src/main/java/at/simulevski/chatterbox/server/mapper/: ChannelMapper.java  UserMapper.java
server/src/main/java/at/simulevski/chatterbox/server/persistence/: ChannelRepository.java  UserRepository.java
server/src/main/java/at/simulevski/chatterbox/server/service/: AuthenticationService.java  ChannelService.java  JwtService.java  UserService.java
server/src/main/resources/: application.properties
server/src/test/java/at/simulevski/chatterbox/server/: ServerApplicationTests.java
(+8 files in other folders)
